--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6.5
 MySQL-python==1.2.5
 argparse==1.2.1
 dj-static==0.0.5
+gunicorn==18.0
 pystache==0.5.4
 static==1.0.2
 wsgiref==0.1.2
